feat: api for testing trigger without saving
