# server/docs/swagger.yaml
@@ -25,8 +25,6 @@ definitions:
   model.Event:
     description: Event object used for input and output
     properties:
-      archived_time:
-        type: string
       event_time:
         type: string
       id:
@@ -66,19 +64,7 @@ definitions:
       updatedAt:
         type: string
     type: object
-  model.User:
-    description: User object used for input and output
-    properties:
-      email:
-        type: string
-      id:
-        type: string
-      password:
-        type: string
-      username:
-        type: string
-    type: object
-  swagger.TriggerDto:
+  model.TriggerDto:
     description: TriggerDto object used for input and output
     properties:
       api_endpoint:
@@ -103,8 +89,23 @@ definitions:
       type:
         example: API/SCHEDULED
         type: string
+    required:
+    - name
+    - type
     type: object
-  swagger.UserDto:
+  model.User:
+    description: User object used for input and output
+    properties:
+      email:
+        type: string
+      id:
+        type: string
+      password:
+        type: string
+      username:
+        type: string
+    type: object
+  model.UserDto:
     description: UserDto object used for input and output
     properties:
       email:
@@ -167,7 +168,42 @@ paths:
             type: object
       summary: Check the health of the server
       tags:
-      - health
+      - Health
+  /test/trigger:
+    post:
+      consumes:
+      - application/json
+      description: Executes API trigegr or One Time Scheduled Trigger Without Saving,
+        but can see in logs
+      parameters:
+      - description: Trigger details
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.TriggerDto'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: API response / Trigger Scheduled Successfully
+          schema:
+            type: string
+        "400":
+          description: Bad request
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: Internal server error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      summary: excute a trigger without saving
+      tags:
+      - Test
   /trigegrs/{trigger_id}:
     delete:
       description: Removes a trigger from the system
@@ -327,7 +363,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/swagger.TriggerDto'
+          $ref: '#/definitions/model.TriggerDto'
       produces:
       - application/json
       responses:
@@ -443,7 +479,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/swagger.UserDto'
+          $ref: '#/definitions/model.UserDto'
       responses:
         "200":
           description: User updated successfully
@@ -475,7 +511,7 @@ paths:
         name: user
         required: true
         schema:
-          $ref: '#/definitions/swagger.UserDto'
+          $ref: '#/definitions/model.UserDto'
       produces:
       - application/json
       responses:
